--- a/index.html
+++ b/index.html
@@ -7,60 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>ME</title>
     <style>
-        .bg-1 {
-            background-color: #1abc9c;
-            /* Green */
-            color: #ffffff;
-        }
-
-        .bg-2 {
-            background-color: #474e5d;
-            /* Dark Blue */
-            color: #ffffff;
-        }
-
-        .bg-3 {
-            background-color: #ffffff;
-            /* White */
-            color: #555555;
-        }
-
-        .container-fluid {
-            padding-top: 70px;
-            padding-bottom: 70px;
-        }
-
-        .navbar {
-            padding-top: 15px;
-            padding-bottom: 15px;
-            border: 0;
-            border-radius: 0;
-            margin-bottom: 0;
-            font-size: 12px;
-            letter-spacing: 5px;
-        }
-
-        .navbar-nav li a:hover {
-            color: #1abc9c !important;
-        }
-
-        .bg-4 {
-            background-color: #2f2f2f;
-            color: #ffffff;
-        }
-
-        body {
-            font: 20px "Montserrat", sans-serif;
-            line-height: 1.8;
-            color: #f5f6f7;
-        }
-
-        p {
-            font-size: 16px;
-        }
-        .margin {margin-bottom: 45px;}
+        
     </style>
 </head>
 
@@ -86,7 +36,7 @@
     </nav>
     <div class="container-fluid bg-1 text-center">
         <h3>Who Am I?</h3>
-        <img src="bird.jpg" class="img-circle" alt="Bird">
+        <img src="./img/bird.jpg" class="img-circle" alt="Bird">
         <h3>I'm an adventurer</h3>
     </div>
 
@@ -105,19 +55,19 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ullam eveniet asperiores
                     reiciendis earum est! Aspernatur accusantium reiciendis deserunt repellat esse tenetur dolore, odit
                     facere eum et iure, ipsum sed.</p>
-                <img src="birds1.jpg" alt="Image" class="img-responsive" style="display:inline;">
+                <img src="./img/birds1.jpg" alt="Image" class="img-responsive" style="display:inline;">
             </div>
             <div class="col-sm-4">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa assumenda velit repudiandae dolorum
                     consequuntur. Corporis, voluptas dolore est consectetur placeat expedita! Magnam reiciendis amet et
                     a, unde necessitatibus molestias placeat.</p>
-                <img src="birds2.jpg" alt="Image" class="img-responsive" style="display:inline">
+                <img src="./img/birds2.jpg" alt="Image" class="img-responsive" style="display:inline">
             </div>
             <div class="col-sm-4">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quos quia odio debitis error aspernatur
                     doloribus provident, harum in tempora aliquid est eveniet pariatur ullam quaerat optio ab dicta
                     nihil?</p>
-                <img src="birds3.jpg" alt="Image" class="img-responsive" style="display:inline;">
+                <img src="./img/birds3.jpg" alt="Image" class="img-responsive" style="display:inline;">
             </div>
         </div>
     </div>
